@@ -1,6 +1,13 @@
+2004-06-12 Serg Stoyan <stoyan255@ukr.net>
+
+	* Library/PCProjectManager.m:
+	* Library/PCProject.m:
+	* PCPrefController.m:
+	Fix bugs related to opening legacy projects.
+	
 2004-06-11 Serg Stoyan <stoyan255@ukr.net>
 
-	* Library/PCProjectManager.[m]:
+	* Library/PCProjectManager.m:
 	(loadProjectAt:): Fix loading "Gorm" poject.
 	
 2004-06-09 Serg Stoyan <stoyan255@ukr.net>
